Add permafrost spell and fix dry frosted ice not being very icy

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -17,6 +17,7 @@ tile.ebwizardry\:thorns.name=Thorns
 tile.ebwizardry\:obsidian_crust.name=Obsidian Crust
 tile.ebwizardry\:dry_frosted_ice.name=Dry Frosted Ice
 tile.ebwizardry\:crystal_flower_pot.name=Flower Pot
+tile.ebwizardry\:permafrost.name=Permafrost
 
 tile.ebwizardry\:magic_crystal_block.name=Block of Crystal
 tile.ebwizardry\:fire_crystal_block.name=Block of Fiery Crystal
@@ -899,6 +900,7 @@ spell.ebwizardry\:muffle=Muffle
 spell.ebwizardry\:none=[Empty Slot]
 spell.ebwizardry\:oakflesh=Oakflesh
 spell.ebwizardry\:paralysis=Paralysis
+spell.ebwizardry\:permafrost=Permafrost
 spell.ebwizardry\:petrify=Petrify
 spell.ebwizardry\:phase_step=Phase Step
 spell.ebwizardry\:plague_of_darkness=Plague of Darkness
@@ -1088,6 +1090,7 @@ spell.ebwizardry\:muffle.desc=Silences any sounds made by the caster for 30 seco
 spell.ebwizardry\:none.desc=To get a spell book with the /give command, use id\: /give [player] ebwizardry\:spell_book 1 [spell id] (if you found this book in a chest, some other mod has messed things up).
 spell.ebwizardry\:oakflesh.desc=Improves the caster's damage resistance for 30 seconds.
 spell.ebwizardry\:paralysis.desc=Delivers a powerful lightning bolt that paralyses targets for 5 seconds. Paralysed creatures cannot move and will still take damage - but too much will snap the creature out of paralysis.
+spell.ebwizardry\:permafrost.desc=Spreads a layer of slippery ice on the ground where you are pointing, the extreme cold of which causes creatures to slowly take damage.
 spell.ebwizardry\:petrify.desc=Turns the target to stone until broken out, with a chance for it to break out when it is dark. The target cannot move or do anything while petrified but is also impervious to all damage.
 spell.ebwizardry\:phase_step.desc=Teleports the caster a short distance in front of them, including through walls. Range upgrades will increase the wall thickness you can teleport through.
 spell.ebwizardry\:plague_of_darkness.desc=The darkness will consume them all...
