Added Construct's Armory integration
This fixes an issue where tinkers armor will be completely destroyed when damaged by the undeath curse. Now, it'll ensure that the curse uses ConArm's damaging if it's a tinkers armor piece and handles damage correctly for that mod.

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -1286,6 +1286,8 @@ config.ebwizardry.jei_integration=JEI Integration
 config.ebwizardry.jei_integration.tooltip=If JEI (Just Enough Items) is installed, controls whether JEI integration features are enabled. If this is disabled, wizardry will always behave as if JEI is not installed.
 config.ebwizardry.antique_atlas_integration=Antique Atlas Integration
 config.ebwizardry.antique_atlas_integration.tooltip=If Antique Atlas is installed, controls whether Antique Atlas integration features are enabled. If this is disabled, wizardry will always behave as if Antique Atlas is not installed.
+config.ebwizardry.constructs_armory_integration=Construct's Armory Integration
+config.ebwizardry.constructs_armory_integration.tooltip=If Construct's Armory is installed, controls whether Construct's Armory integration features are enabled. If this is disabled, wizardry will always behave as if Construct's Armory is not installed and may have unintended effects towards Tinkers Armor.
 config.ebwizardry.auto_place_tower_markers=Auto-Place Tower Markers
 config.ebwizardry.auto_place_tower_markers.tooltip=Controls whether wizardry automatically places antique atlas markers at the locations of wizard towers.
 config.ebwizardry.auto_place_obelisk_markers=Auto-Place Obelisk Markers
