Sync en_us.lang

--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -542,7 +542,7 @@ item.ebwizardry\:charm_abseiling.desc=在施放藤蔓抓钩法术时潜行会减
 item.ebwizardry\:charm_silk_touch.name=月石宝珠
 item.ebwizardry\:charm_silk_touch.desc=使用挖掘魔法破坏的方块必定掉落其本身
 item.ebwizardry\:charm_sixth_sense.name=恐狼毛皮
-item.ebwizardry\:charm_sixth_sense.desc=第六感会为被动、中立和敌对生物显示不同颜色
+item.ebwizardry\:charm_sixth_sense.desc=第六感会以不同形状显示被动、中立和敌对生物
 item.ebwizardry\:charm_stop_time.name=奇特怀表
 item.ebwizardry\:charm_stop_time.desc=时间滞留魔法会让时间完全静止
 item.ebwizardry\:charm_light.name=Elevinia 的永燃圣灯
