--- a/src/main/resources/assets/ebwizardry/lang/zh_tw.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_tw.lang
@@ -1,6 +1,6 @@
 # PARSE_ESCAPES
 tile.ebwizardry\:arcane_workbench.name=奧術工作檯
-tile.ebwizardry\:crystal_ore.name=水晶礦石
+tile.ebwizardry\:crystal_ore.name=水晶礦
 tile.ebwizardry\:petrified_stone.name=石化石
 tile.ebwizardry\:ice_statue.name=冰雕
 tile.ebwizardry\:crystal_flower.name=水晶花
