--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -10,7 +10,7 @@ tile.ebwizardry\:transportation_stone.name=Камень перемещения
 tile.ebwizardry\:transportation_stone.confirm=Теперь ты сюда вернёшься после произношения заклинания — %1$s
 tile.ebwizardry\:transportation_stone.remember=Запомнил местонахождение %s, %s, %s в измерении %s
 tile.ebwizardry\:transportation_stone.forget=Забыл местонахождение %s, %s, %s в измерении %s
-tile.ebwizardry\:transportation_stone.invalid=В первую очередь тебе нужно сделать окружность из 8 камней транспортировки!
+tile.ebwizardry\:transportation_stone.invalid=В первую очередь тебе нужно сделать окружность из 8 камней перемещения!
 tile.ebwizardry\:spectral_block.name=Спектральный блок
 tile.ebwizardry\:runestone.name=Рунический камень
 tile.ebwizardry\:runestone_pedestal.name=Пьедестал из рунического камня
@@ -544,7 +544,7 @@ item.ebwizardry\:charm_sixth_sense.desc=Интуиция отображает р
 item.ebwizardry\:charm_stop_time.name=Специфичные карманные часы
 item.ebwizardry\:charm_stop_time.desc=Заклинание замедленного времени останавливает время.
 item.ebwizardry\:charm_light.name=Неугасаемый фонарь Эльвиры
-item.ebwizardry\:charm_light.desc=Наколдованные источник света длятся вечно их же можно развеять, нажатием пкм по ним жезлом.
+item.ebwizardry\:charm_light.desc=Наколдованные источник света держится вечно их же можно развеять, нажатием пкм по ним жезлом.
 item.ebwizardry\:charm_transportation.name=Древний компас
 item.ebwizardry\:charm_transportation.desc=Может запоминать и выбирать до 4х каменных кругов при использовании перемещения.
 item.ebwizardry\:charm_black_hole.name=Пустотелый опал
@@ -927,7 +927,7 @@ spell.ebwizardry\:banish.desc=Телепортирует цель вопреки
 spell.ebwizardry\:black_hole=Чёрная дыра
 spell.ebwizardry\:black_hole.desc=Ломает реальность в клочья.
 spell.ebwizardry\:blinding_flash=Ослепляющая вспышка
-spell.ebwizardry\:blinding_flash.desc=Выделяет очень яркую вспышка света, которая ослепляет всех ближайших существ.
+spell.ebwizardry\:blinding_flash.desc=Излучает очень яркую вспышка света, которая ослепляет всех ближайших существ.
 spell.ebwizardry\:blink=Миг
 spell.ebwizardry\:blink.desc=Телепортирует чародея на короткое расстояние куда он указывает.
 spell.ebwizardry\:blizzard=Снежная метель
