feat: Reworked the Oakflesh, Ironflesh and Diamondflesh spells

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -1203,7 +1203,7 @@ spell.ebwizardry\:intimidate.desc=Emits an intimidating growl which causes nearb
 spell.ebwizardry\:invigorating_presence.desc=Grants the caster and all nearby allies increased strength for 45 seconds.
 spell.ebwizardry\:invisibility.desc=Makes the caster invisible for 30 seconds.
 spell.ebwizardry\:invoke_weather.desc=Changes the weather in the world.
-spell.ebwizardry\:ironflesh.desc=Greatly improves the caster's damage resistance for 30 seconds.
+spell.ebwizardry\:ironflesh.desc=Greatly improves the caster's armor and knockback resistance for 30 seconds.
 spell.ebwizardry\:leap.desc=Causes the caster to jump upwards several blocks and slightly forward.
 spell.ebwizardry\:levitation.desc=Raises the caster upwards while the use item button is held. Will also negate fall damage if used before hitting the ground.
 spell.ebwizardry\:life_drain.desc=Creates a stream of withering energy in the direction you are pointing which drains the life of the target and uses it to gradually regenerate your health.
@@ -1226,7 +1226,7 @@ spell.ebwizardry\:mine.desc=Breaks the block the caster is looking at. Potency w
 spell.ebwizardry\:mirage.desc=Creates an illusion where the caster appears to be a few blocks away from their actual position, blinking around every few seconds. The illusion lasts for 20 seconds.
 spell.ebwizardry\:muffle.desc=Silences any sounds made by the caster for 30 seconds. When muffled, mobs can only detect you when looking towards you.
 spell.ebwizardry\:none.desc=To get a spell book with the /give command, use id\: /give [player] ebwizardry\:spell_book 1 [spell id] (if you found this book in a chest, some other mod has messed things up).
-spell.ebwizardry\:oakflesh.desc=Improves the caster's damage resistance for 30 seconds.
+spell.ebwizardry\:oakflesh.desc=Slightly improves the caster's vitality and damage resistance for 30 seconds.
 spell.ebwizardry\:paralysis.desc=Delivers a powerful lightning bolt that paralyses targets for 5 seconds. Paralysed creatures cannot move and will still take damage - but too much will snap the creature out of paralysis.
 spell.ebwizardry\:permafrost.desc=Spreads a layer of slippery ice on the ground where you are pointing, the extreme cold of which causes creatures to slowly take damage.
 spell.ebwizardry\:petrify.desc=Turns the target to stone until broken out, with a chance for it to break out when it is dark. The target cannot move or do anything while petrified but is also impervious to all damage.
@@ -1400,6 +1400,9 @@ potion.ebwizardry\:containment=Containment
 potion.ebwizardry\:frost_step=Frost Step
 potion.ebwizardry\:mark_of_sacrifice=Mark of Sacrifice
 potion.ebwizardry\:mirage=Mirage
+potion.ebwizardry\:oakflesh=Oakflesh
+potion.ebwizardry\:ironflesh=Ironflesh
+potion.ebwizardry\:diamondflesh=Diamondflesh
 
 enchantment.ebwizardry\:magic_sword=Imbuement
 enchantment.ebwizardry\:magic_bow=Imbuement
