feat: Soulwalker's Ring only soulbounds an entity for 20 seconds

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -438,7 +438,7 @@ item.ebwizardry\:ring_hammer.desc=Lightning hammers can be picked up and thrown
 item.ebwizardry\:ring_stormcloud.name=Lokenzen's Ring
 item.ebwizardry\:ring_stormcloud.desc=Stormcloud moves towards targets and lasts longer with every strike
 item.ebwizardry\:ring_soulbinding.name=Soulwalker's Ring
-item.ebwizardry\:ring_soulbinding.desc=Creatures damaged by necromancy spells become soulbound to you
+item.ebwizardry\:ring_soulbinding.desc=Creatures damaged by necromancy spells become soulbound to you for 20 seconds
 item.ebwizardry\:ring_leeching.name=Ring of Leeching
 item.ebwizardry\:ring_leeching.desc=All necromancy attacks have a 30%% chance to trigger a life drain effect
 item.ebwizardry\:ring_necromancy_melee.name=Ring of Necrotic Touch
