--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -77,7 +77,9 @@ item.ebwizardry\:spell_book.apply_to_wizard=Replaced %1$s's spell %2$s with %3$s
 item.ebwizardry\:ruined_spell_book.name=Ruined Spell Book
 item.ebwizardry\:ruined_spell_book.desc=The pages of this tattered spell book are too damaged to be read properly, but somehow, you feel there is still magic left within it - if only it could be restored...
 
-item.ebwizardry\:arcane_tome.name=Tome of Arcana
+item.ebwizardry\:arcane_tome_apprentice.name=Tome of Arcana
+item.ebwizardry\:arcane_tome_advanced.name=Tome of Arcana
+item.ebwizardry\:arcane_tome_master.name=Tome of Arcana
 item.ebwizardry\:arcane_tome.desc=Upgrades any %1$s wand with sufficient progression to %2$s tier
 
 item.ebwizardry\:wizard_handbook.name=The Wizard's Handbook
